--- a/river_phenology.Rmd
+++ b/river_phenology.Rmd
@@ -1,47 +1,54 @@
-# Overview
+---
+title: 'Santa Clara River Phenology'
+author: "{Kristina Glass}"
+date: "2023-12-15"
+output:
+    html_document:
+      print_df: paged
+      toc: yes
+      toc_depth: 4
+      toc_float: yes
+---
 
-Phenology is the timing of life history events. Important phenological events for plants involve the growth of leaves, flowering, and senescence (death of leaves). Plants species adapt the timing of these events to local climate conditions to ensure successful reproduction. Subsequently, animal species often adapt their phenology to take advantage of food availability. As the climate shifts this synchronization is being thrown out of whack. Shifts in phenology are therefore a common yardstick of understanding how and if ecosystems are adjusting to climate change.\
+# Introduction
 
-Plant species may employ the following phenological strategies:\
+*\*Credit: This project is based on materials developed by Chris Kibler*
 
--   winter deciduous: lose leaves in the winter, grow new leaves in the spring\
--   drought deciduous: lose leaves in the summer when water is limited\
--   evergreen: maintain leaves yearround\
+## What is Phenology
 
-credit: this lab is based on a materials developed by Chris Kibler.
+Phenology is the cyclical and seasonal lifecycle of natural phenomenon. For plants, importent phenological events include their growth of leaves, flowering, and death of leaves (or senescence). Some common phenological strategies of plants include the loss of leaves in winter and growth of leaves in spring (winter deciduous), the loss of leaves in summer (drought deciduous), and the maintenance of leaves year-round (evergreen). Due to climate change, plant phenology is shifting and it is important to understand what these shifts include and where these shifts are happening.
 
-# Task
+## Area of Interest
 
-In this lab we are analyzing plant phenology near the Santa Clara River which flows from Santa Clarita to Ventura. We will investigate the phenology of the following plant communities:\
+For this study, we're interested in exploring plant phenology near the Santa Clara River which flows from Santa Clarita, CA and Ventura, CA.
 
--   riparian forests: grow along the river, dominated by winter deciduous cottonwood and willow trees\
--   grasslands: grow in openspaces, dominated by drought deciduous grasses\
--   chaparral shrublands: grow in more arid habitats, dominated by evergreen shrubs\
+# Purpose of Study
 
-To investigate the phenology of these plant communities we will a time series of Landsat imagery and polygons identifying the locations of study sites within each plant community.\
+The purpose of this study is to investigate plant phenology of riparian forests, grasslands, and chaparral shrub lands along the Santa Clara River. Riparian forests grow along the river and are dominated by winter deciduous cottonwood and willow trees, grasslands grow in open spaces and are predominate dominated by deciduous grasses, and chaparral shrub lands grow in more arid areas and are dominated by evergreen shrubs.
 
-## Data
+We will explore the vegetation productivity (NDVI), calculate the NDVI throughout the year, summarize the NDVI values within vegetation communities, and visualize the changes in NDVI within vegetation communities.
 
-**Landsat Operational Land Imager (OLI sensor)**\
+# Data
 
--   8 pre-processed scenes\
-    -   Level 2 surface reflectance products\
-    -   erroneous values were set to NA\
-    -   scale factor set to 100\
-    -   bands 2-7\
-    -   dates in filenname\
+**Landsat Operational Land Imager (OLI sensor)** which contains 8 pre-processed scenes. The attributes of the scenes are as follows:
 
-**Study sites**
+1.  Level 2 surface reflectance products
 
--   polygons representing sites\
-    -   study_site: character string with plant type
+2.  erroneous values were set to NA
 
-## Summary of approach
+3.  Scale factor set to 100
 
--   Convert spectral relfectance into a measure of vegetation productivity (NDVI)
--   Calulate NDVI throughout the year
--   Summarize NDVI values within vegetation communities
--   Visualize changes in NDVI within vegetation communities
+4.  Bands are 2-7
+
+5.  Dates of the scenes are in file name
+
+and
+
+**Study sites** which are polygons that represent the sites of interest. The attributes are as follows:
+
+1.  "study_site" is a character string with plant type
+
+The data are available in a folder labeled "data" within the repository
 
 # Workflow
 
@@ -64,12 +71,12 @@ rm(list = ls())
 here::i_am("assignments/santa_clara_river_phenology/river_phenology.Rmd")
 ```
 
-### create NDVI function
+## Function to Compute Single NDVI Scene
 
-Let's start by defining a function to compute the Normalized Difference Vegetation Index (NDVI). NDVI computes the difference in reflectance in the near infrared and red bands, normalized by their sum.
+This function computes the Normalized Difference Vegetation Index (NDVI). NDVI is a computation of the differences in reflectance (the ratio of incoming light reflected by a leaf) in NIR (near infrared) and red bands that are then normalized by sum
 
 ```{r ndvi-function}
-
+# create function to compute single NDVI scene
 ndvi_fun <- function(nir, red){
   
   (nir - red)/(nir + red)
@@ -78,41 +85,31 @@ ndvi_fun <- function(nir, red){
 
 ```
 
-### computing NDVI for a single scene
-
-We have 8 scenes collected by the Landsat OLI sensor on 8 different days throughout the year. Let's start by loading in the first scene collected on June 12, 2018
-
 ```{r}
-
+# read in first landsat scene from June 12, 2018
 landsat_20180612 <- rast(here("assignments", "santa_clara_river_phenology","data", "landsat_20180612.tif"))
-
-landsat_20180612
-```
-
-Now let's update the names of the layers to match the spectral bands they correspond to
-
-```{r}
+#view dataset
+#landsat_20180612
+#update layer names
 names(landsat_20180612) <- c("blue", "green", "red", "NIR", "SWI1", "SWI2")
-
-landsat_20180612
+#confirm layer names were updated
+#landsat_20180612
 ```
 
-Now we can apply the NDVI function we created to compute NDVI for this scene using the `lapp()` function. The `lapp()` function applies a function to each cell using layers as arguments. Therefore, we need to tell `lapp()` which layers (or bands) to pass into the function. The NIR band is the 4th layer and the red band is the 3rd layer in our raster. In this case, because we defined the NIR band as the first argument and the red band as the second argument in our function, we tell `lapp()` to use the 4th layer first and 3rd layer second.
+The NDVI function created above can be applied with the `lapp()` function, which applies a function to each cell using layers as arguments. To do so, the layers need to be passed into the function. For this data, NIR is the 4th layer and the red band is the 3rd. Bands or layers need to be applied in the order in which they were defined in the function.
 
 ```{r}
+#compute NDVI for June 12th, 2018 with lapp()
 ndvi_20180612<-lapp(landsat_20180612[[c(4,3)]], fun = ndvi_fun)
-
+#view dataset
 ndvi_20180612
+#exploratory output plot of dataset
 plot(ndvi_20180612)
 ```
 
-### computing NDVI for all scenes - attempt 2
+## Function to Compute all NDVI Scenes
 
-The first attempt was pretty clunky and required a lot of copy/pasting. Because we're performing the same operations over and over again, this is a good opportunity to generalize our workflow into a function!
-
-#### starting from scratch
-
-Let's start over and see how we could do this more efficiently. We'll clear our environment and redefine our function for NDVI.
+To make a more fluid process to compute NDVI, I created a function that computes all NDVI scenes simultaneously
 
 ```{r}
 rm(list = ls())
@@ -123,43 +120,28 @@ ndvi_fun = function(nir, red){
 }
 ```
 
-#### outlining our function
-
-Let's first sketch out what operations we want to perform so we can figure out what our function needs.
-
 ```{r eval=FALSE}
-
+# create a basic outline of the function
 # note: this code is not meant to run! we're just outlining the function we want to create
 create_ndvi_layer <- function(){
   landsat <- rast(file) # read in scene
   names(landsat) <- c("blue", "green", "red", "NIR", "SWIR1", "SWIR2") # rename layers
   ndvi <- lapp(landsat[[c(4, 3)]], fun = ndvi_fun) # compute NDVI
 }
-# what do we notice as what we need to pass into our function?
 
 ```
 
-#### creating a list of files/scenes
-
-We want a list of the scenes so that we can tell our function to compute NDVI for each. To do that we look in our data folder for the relevant file.
-
 ```{r}
-# here we're asking for the names of all the files in the week8 folder
+
+#calling for a list if files from the data folder stores all data to one variable
 # the "pattern" option returns names that end in .tif (the file extension for the landsat scences)
 # the "full.names" option returns the full file path for each scene
 
 files <- list.files(here("assignments", "santa_clara_river_phenology","data"), pattern = "*.tif", full.names = TRUE)
-
-files
-
 ```
 
-#### updating our function
-
-Now let's update our function to work with list of file names we created
-
 ```{r}
-
+#update function to work with list of file names
 # now we're passing our function a number that will correspond to the index in the list of file names
 create_ndvi_layer <- function(i){
   landsat <- rast(files[i])
@@ -167,16 +149,12 @@ create_ndvi_layer <- function(i){
   ndvi <- lapp(landsat[[c(4, 3)]], fun = ndvi_fun)
 }
 
-# let's test our function by asking it to read in the first file 
+#testfunction by asking it to read in the first file 
 test <- create_ndvi_layer(1)
 ```
 
-#### run function on all scenes!
-
-Now we can use our function to create a NDVI layer for each scene and stack them into a single rasterstack.
-
 ```{r}
-# create NDVI layer for each scene (day) and stack into a single rasterstack
+#run function on all scenes
 # create NDVI layer for each scene (day) and stack into a single rasterstack
 all_ndvi <- c(create_ndvi_layer(1),
               create_ndvi_layer(2),
@@ -198,19 +176,15 @@ names(all_ndvi) <- c("2018-06-12",
                      "2019-07-01")
 ```
 
-### Compare NDVI across vegetation communities
+## Compare NDVI Across Vegetation Communities
+
+Since the NDVI for each scene was computed, I can now compare changes in NDVI values across the vegetation communities within the region. As a reminder, those communities are: riparion forests, grasslands, chaparral shrub lands
 
 Now that we have computed NDVI for each of our scenes (days) we want to compare changes in NDVI values across different vegetation communities.
 
-#### read in study sites
-
-First, we'll read in a shapefile of study sites.
-
 ```{r include=TRUE}
-
+#read in shapefile of the study sites
 sites <- st_read(here("assignments", "santa_clara_river_phenology","data", "study_sites.shp"))
-
-sites
 
 # plot study sites on a single NDVI layer
 tm_shape(all_ndvi[[1]]) +
@@ -219,46 +193,62 @@ tm_shape(all_ndvi[[1]]) +
   tm_polygons()
 ```
 
-#### extract NDVI at study sites
+Now, I will find the
 
 Here we find the average NDVI within each study site. The output of extract is a data frame with rows that match the study site dataset, so we bind the results to the original dataset.
 
 ```{r include=TRUE}
+#extract NDVI at Study Sites
+#find average NDVI within each study sites
 sites_ndvi <- terra::extract(all_ndvi, sites, fun = "mean")
+#output of sites_ndvi will be a data frame that has rows that match the study sites data set
+
+#bind both datasets by column
 sites_annotated <- cbind(sites, sites_ndvi)
-```
 
-#### clean results
-
-We're done! Except our data is very untidy... Let's tidy it up!\
-
--   convert to data frame
--   turn from wide to long format
--   turn layer names into date format
-
-```{r include=TRUE}
+#clean dataset
 sites_clean <- sites_annotated %>%
-  st_drop_geometry() %>%
-  select(-ID) %>%
-  pivot_longer(!study_site) %>%
-  rename("NDVI" = value) %>%
-  mutate("year" = str_sub(name, 2, 5),
+  st_drop_geometry() %>% #remove unecessary geometry
+  select(-ID) %>% #remove ID column
+  pivot_longer(!study_site) %>% #increases number or rows and decreases number of columns
+  rename("NDVI" = value) %>% #rename column
+  mutate("year" = str_sub(name, 2, 5), #extracts and replaces elements at a single position. finds emelent position within column and places it into new columns labled by year, month, day
          "month" = str_sub(name, 7, 8),
          "day" = str_sub(name, -2, -1)) %>%
-  unite("date", 4:6, sep = "-") %>%
-  mutate("date" = lubridate::as_date(date)) %>% 
-  select(-name)
+  unite("date", 4:6, sep = "-") %>% #mutated columns above are brought into a single date column, separated by "-"
+  mutate("date" = lubridate::as_date(date)) %>% #turn date column into a datetime object
+  select(-name) #remove names column
 ```
 
-#### plot results
+## Plot Results
 
 ```{r include=TRUE}
 ggplot(sites_clean,
        aes(x = date, y = NDVI,
-           group = study_site, col = study_site)) +
-  scale_color_manual(values = c("#EAAC8B", "#315C2B", "#315C2B", "#315C2B","#9EA93F")) +
-  geom_line() +
-  theme_minimal() +
+           group = study_site, col = study_site)) + #plot data colored by study_site
+  scale_color_manual(values = c("#EAAC8B", "seagreen", "darkolivegreen", "#9EA93F","goldenrod")) +
+  geom_line() + #plot NDVI as line
+  theme_dark() + #dark background so its easier to see colors in line
   labs(x = "", y = "Normalized Difference Vegetation Index (NDVI)", col = "Vegetation type",
        title = "Seasonal cycles of vegetation productivity")
 ```
+
+NDVI values will range from -1.0 - 1.0, where negative values indicate clouds and water, positive values near zero indicate bare soil, values from 0.1-0.5 indicating sparse vegetation and 0.6-1.0 indicating dense green vegetation [2](<https://ipad.fas.usda.gov/cropexplorer/Definitions/spotveg.htm>). With this knowledge, we can begin to interpret the results.
+
+### Chaparral
+
+NDVI primarily remained above 0.6, save for a dip falling to 0.55 at the lowest between July and October. Since these vegetation communities are dominated by evergreen species, this is an expected result since they stay green all year long. The small dip in NDVI could be attributed to high temperatures seen during the summer or a small drought period.
+
+### Riparian Forests
+
+Forest1 and Forest 2 maintain similar cycles of productivity, experiencing drops in NDVI under 0.5-0.4 from January to April, and rises in productivity during summer months. Since the communities within Riparian forests are winter deciduous, they will lose their leaves during the fall and winter and regrow them through the spring in summer, explaining the rise and fall cycles of its NDVI.
+
+For Forest3 maintains similar productivity cycles as those listed above, but has much longer periods of maintaining sparse vegetation, save for a spike above 0.6 after April 2019.
+
+### Grassland
+
+This vegetation experiences the most extreme shifts in NDVI, with values under 0.3 from July 2018 to just after October 2018 where it experiences a sharp spike, followed by a sudden decline after April 2019. Since these grasses are deciduous, they lose their leaves in the winter and gain them back during the Spring.
+
+# Conclusion
+
+From the data available, we can see that in 2019, NDVI values as of July were above NDVI values for the following year. This could be due to longer periods of rain, longer periods of warm weather, or other climate related factors, which would be worth investigating for future study. While none of the study sites experienced extreme deviations expected NDVI from 2018-2019, the shift in their seasonal productivity cycle is present as indicated by the plot above.
